tests/errors/sem.expected-ptr.accessee-type.or
main :: () -> void {
    y := 0;
    x := &y;
    x[1];
};
